--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ body {
 
 /* Bootstrap 4 text input with search icon */
 
-.has-search .form-control {
+/* .has-search .form-control {
   padding-left: 2.375rem;
 }
 
@@ -256,4 +256,4 @@ body {
   text-align: center;
   pointer-events: none;
   color: #aaa;
-}
+} */
