--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,15 @@ body {
   width: 50%;
   margin: 50px auto;
 }
+#searchInput {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+}
+
+#searchResults {
+  padding: 20px;
+}
 
 /* Bootstrap 4 text input with search icon */
 
